fixed sidebar scrollbar

--- a/style.sass
+++ b/style.sass
@@ -32,7 +32,7 @@ $rainbow: hsl(337, 53%, 57%), hsl(3, 87%, 69%), hsl(34, 95%, 67%), hsl(165, 28%,
     color: $primary-color
     display: flex
     flex-direction: column
-    overflow-y: scroll
+    overflow-y: auto
     background-color: #412e2e
     border: 1px solid #775353
     box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2)
